# rust-api-boilerplate

./: Cargo.toml  README.md  cleanup.sh
src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
src/web/: auth.rs  mod.rs  routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
