[package]
name = "rust-axum-intro"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"]}
# Serde / json
serde = { version = "1", features = ["derive"]}
serde_json="1"
# Axum
axum = { version = "0.6.16", features = ["macros"]}
tower-http = { version = "0.4.0", features = ["fs"]}
tower-cookies = "0.9.0"
# others
lazy-regex = "2"
async-trait = "0.1"
strum_macros = "0.24.3"
uuid = { version = "1.3.2", features = ["v4", "fast-rng"] }
serde_with = "3.0.0"
chrono = "0.4.24"

[dev-dependencies]
anyhow = "1.0"
httpc-test="0.1.1"